--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,30 @@
             login.jsp
         </welcome-file>
     </welcome-file-list>
+    <filter>
+        <filter-name>AutenticacaoFilter</filter-name>
+        <filter-class>Filter.AutenticacaoFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>TempoRequisicao</filter-name>
+        <filter-class>Filter.TempoRequisicaoFilter</filter-class>
+    </filter>
+    <filter>
+        <filter-name>TratamentoErroFilter</filter-name>
+        <filter-class>Filter.TratamentoErroFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>TratamentoErroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>TempoRequisicao</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>AutenticacaoFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>loginController</servlet-name>
         <servlet-class>Controller.loginController</servlet-class>
