--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,6 +44,7 @@
     <servlet-mapping>
         <servlet-name>ClienteController</servlet-name>
         <url-pattern>/cadPaciente</url-pattern>
+        <url-pattern>/listPaciente</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
