--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -37,6 +37,10 @@
         <servlet-name>ClienteController</servlet-name>
         <servlet-class>br.com.asfecer.controller.PacienteController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>usuarioController</servlet-name>
+        <servlet-class>br.com.asfecer.controller.usuarioController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>loginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -45,6 +49,10 @@
         <servlet-name>ClienteController</servlet-name>
         <url-pattern>/cadPaciente</url-pattern>
         <url-pattern>/listPaciente</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>usuarioController</servlet-name>
+        <url-pattern>/criaUser</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
